Makefile.in, configure: automatically rebuilt based on changes to com_hp_hpl_lintel.m4, Makefile.am com_hp_hpl_lintel.m4: fix bug that prevented adding a file while building in the local directory   with --enable-maintainer-mode on src/Makefile.am: add BatchParallel/jobsfile.pm to the list of modules BatchParallel/jobsfile.pm: a simple batch-parallel module that runs a bunch   of jobs as specified in a file, and puts their output into a particular   directory.  Will re-run failed jobs and ignore commands with a # at the front of the line. batch-parallel.in: minor bugfix in write_joblist to use @_ rather than @ARGV in function arguments.

--- a/src/batch-parallel.in
+++ b/src/batch-parallel.in
@@ -249,7 +249,7 @@ sub batch_submit {
 }
 
 sub write_joblist {
-    my ($basedir) = @ARGV; # optional
+    my ($basedir) = @_; # optional
 
     my $hostname = `hostname`;
     chomp($hostname);
