*/Makefile.in, configure: rebuild based on changes to Makefile.am in   previous version.
com_hp_hpl_lintel.m4: BUGFIX: Use top_srcdir rather than srcdir.  Add
  a big comment explaining why we do this change in the file.

make_gcalloc_h.pl: BUGFIX: change /* to */ so comment properly terminates.

--- a/Makefile.in
+++ b/Makefile.in
@@ -126,6 +126,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBLINTELPTHREAD_VERSION = @LIBLINTELPTHREAD_VERSION@
 LIBLINTEL_VERSION = @LIBLINTEL_VERSION@
 LIBNOGC_VERSION = @LIBNOGC_VERSION@
 LIBOBJS = @LIBOBJS@
