* Updates to get StatsQuantile to work properly with more than 2 billion      entries.    * Minor updates to src/Makefile.am to get dependencies on built library      correct.
**/Makefile.in: updates from rebuilding Makefiles
StatsQuantile.C: change a bunch of calls to count() to countll(); change a
  bunch of integers to long longs; update a number of assertions.
  Remove the irrelevant regression test at the end of the class file.
stats_quantile.C: add a long running regression test that checks for proper
  quantile support with 10billion entries in the table.  Takes a really 
  long time to run, so only runs when explicitly requested with a command
  line option.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@ bin_SCRIPTS = buildTcl batch-parallel lintel-config lintel-acinclude
 calcStats_SOURCES = calcStats.C
 drawRandomLogNormal_SOURCES = drawRandomLogNormal.C
 
-LDADD = $(top_builddir)/src/libLintel.la @TCL_LIBS@ libnogc.la -lpthread
+LDADD = libLintel.la @TCL_LIBS@ libnogc.la -lpthread
 AM_CPPFLAGS = -I$(top_srcdir)/include/Lintel -I$(top_builddir)/include/Lintel @TCL_CFLAGS@ @GC_CFLAGS@ -DLIBLINTEL_VERSION="\"@LIBLINTEL_VERSION@\""
 AM_LDFLAGS = @OPTMODE_LDFLAGS@
 
