* CVS import from 2006-06-01 15:30 PST

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,19 +1,22 @@
+*.Do
 *.Oo
 *.Po
-*.Do
-LintelAssert
-Random
-drawRandomLogNormal
-calcStats
-Uncompress1
-Uncompress2
-regression_Random
-regression_Assert
-regression_Uncompress
-.make.depend
-LintelTclCommands.C
-GC_Alloc.H
 acinclude.m4
 aclocal.m4
 autom4te.cache
+calcStats
 config.log
+config.status
+drawRandomLogNormal
+GC_Alloc.H
+libtool
+LintelAssert
+LintelTclCommands.C
+.make.depend
+Makefile
+Random
+regression_Assert
+regression_Random
+regression_Uncompress
+Uncompress1
+Uncompress2
