--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -54,10 +54,10 @@ bin_PROGRAMS = calcStats$(EXEEXT) drawRandomLogNormal$(EXEEXT)
 @WITH_TCL_TRUE@  Random.C Randommwm.C TclInterface.C 
 
 @WITH_GC_TRUE@am__append_2 = ConstantString.C
-check_PROGRAMS = tests/check-Random$(EXEEXT) \
-	tests/check-StatsQuantile$(EXEEXT) \
+check_PROGRAMS = tests/check-StatsQuantile$(EXEEXT) \
 	tests/check-Uncompress$(EXEEXT) \
-	tests/check-LintelAssert$(EXEEXT)
+	tests/check-LintelAssert$(EXEEXT) $(am__EXEEXT_1)
+@WITH_TCL_TRUE@am__append_3 = tests/check-Random
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/batch-parallel.in $(srcdir)/lintel-acinclude.in \
@@ -106,39 +106,36 @@ libnogc_la_LIBADD =
 am_libnogc_la_OBJECTS = nogc.lo
 libnogc_la_OBJECTS = $(am_libnogc_la_OBJECTS)
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
+@WITH_TCL_TRUE@am__EXEEXT_1 = tests/check-Random$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 am_calcStats_OBJECTS = calcStats.$(OBJEXT)
 calcStats_OBJECTS = $(am_calcStats_OBJECTS)
 calcStats_LDADD = $(LDADD)
-calcStats_DEPENDENCIES = $(top_builddir)/src/libLintel.la libnogc.la
+calcStats_DEPENDENCIES = libLintel.la libnogc.la
 am_drawRandomLogNormal_OBJECTS = drawRandomLogNormal.$(OBJEXT)
 drawRandomLogNormal_OBJECTS = $(am_drawRandomLogNormal_OBJECTS)
 drawRandomLogNormal_LDADD = $(LDADD)
-drawRandomLogNormal_DEPENDENCIES = $(top_builddir)/src/libLintel.la \
-	libnogc.la
+drawRandomLogNormal_DEPENDENCIES = libLintel.la libnogc.la
 am_tests_check_LintelAssert_OBJECTS = check-LintelAssert.$(OBJEXT)
 tests_check_LintelAssert_OBJECTS =  \
 	$(am_tests_check_LintelAssert_OBJECTS)
 tests_check_LintelAssert_LDADD = $(LDADD)
-tests_check_LintelAssert_DEPENDENCIES =  \
-	$(top_builddir)/src/libLintel.la libnogc.la
+tests_check_LintelAssert_DEPENDENCIES = libLintel.la libnogc.la
 am__dirstamp = $(am__leading_dot)dirstamp
-am_tests_check_Random_OBJECTS = check-Random.$(OBJEXT)
+am__tests_check_Random_SOURCES_DIST = tests/check-Random.C
+@WITH_TCL_TRUE@am_tests_check_Random_OBJECTS = check-Random.$(OBJEXT)
 tests_check_Random_OBJECTS = $(am_tests_check_Random_OBJECTS)
 tests_check_Random_LDADD = $(LDADD)
-tests_check_Random_DEPENDENCIES = $(top_builddir)/src/libLintel.la \
-	libnogc.la
+tests_check_Random_DEPENDENCIES = libLintel.la libnogc.la
 am_tests_check_StatsQuantile_OBJECTS = stats_quantile.$(OBJEXT)
 tests_check_StatsQuantile_OBJECTS =  \
 	$(am_tests_check_StatsQuantile_OBJECTS)
 tests_check_StatsQuantile_LDADD = $(LDADD)
-tests_check_StatsQuantile_DEPENDENCIES =  \
-	$(top_builddir)/src/libLintel.la libnogc.la
+tests_check_StatsQuantile_DEPENDENCIES = libLintel.la libnogc.la
 am_tests_check_Uncompress_OBJECTS = check-Uncompress.$(OBJEXT)
 tests_check_Uncompress_OBJECTS = $(am_tests_check_Uncompress_OBJECTS)
 tests_check_Uncompress_LDADD = $(LDADD)
-tests_check_Uncompress_DEPENDENCIES =  \
-	$(top_builddir)/src/libLintel.la libnogc.la
+tests_check_Uncompress_DEPENDENCIES = libLintel.la libnogc.la
 binSCRIPT_INSTALL = $(INSTALL_SCRIPT)
 SCRIPTS = $(bin_SCRIPTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir)
@@ -171,7 +168,7 @@ DIST_SOURCES = $(am__libLintel_la_SOURCES_DIST) \
 	$(libLintelPThread_la_SOURCES) $(libnogc_la_SOURCES) \
 	$(calcStats_SOURCES) $(drawRandomLogNormal_SOURCES) \
 	$(tests_check_LintelAssert_SOURCES) \
-	$(tests_check_Random_SOURCES) \
+	$(am__tests_check_Random_SOURCES_DIST) \
 	$(tests_check_StatsQuantile_SOURCES) \
 	$(tests_check_Uncompress_SOURCES)
 nobase_bpmodulesDATA_INSTALL = $(install_sh_DATA)
@@ -312,7 +309,7 @@ AUTOMAKE_OPTIONS = 1.7 foreign
 bin_SCRIPTS = buildTcl batch-parallel lintel-config lintel-acinclude
 calcStats_SOURCES = calcStats.C
 drawRandomLogNormal_SOURCES = drawRandomLogNormal.C
-LDADD = $(top_builddir)/src/libLintel.la @TCL_LIBS@ libnogc.la -lpthread
+LDADD = libLintel.la @TCL_LIBS@ libnogc.la -lpthread
 AM_CPPFLAGS = -I$(top_srcdir)/include/Lintel -I$(top_builddir)/include/Lintel @TCL_CFLAGS@ @GC_CFLAGS@ -DLIBLINTEL_VERSION="\"@LIBLINTEL_VERSION@\""
 AM_LDFLAGS = @OPTMODE_LDFLAGS@
 lib_LTLIBRARIES = libLintel.la libLintelPThread.la libnogc.la
@@ -338,7 +335,7 @@ libLintelPThread_la_SOURCES = \
 
 bpmodulesdir = $(datadir)/bp_modules
 nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm
-tests_check_Random_SOURCES = tests/check-Random.C
+@WITH_TCL_TRUE@tests_check_Random_SOURCES = tests/check-Random.C
 tests_check_StatsQuantile_SOURCES = tests/stats_quantile.C
 tests_check_Uncompress_SOURCES = tests/check-Uncompress.C
 tests_check_LintelAssert_SOURCES = tests/check-LintelAssert.C
@@ -863,10 +860,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
 @WITH_MAKEBITS_TRUE@	$(install_sh_DATA) $(srcdir)/Make.common $(DESTDIR)$(libdir)/Make.common
 @WITH_MAKEBITS_TRUE@	$(install_sh_DATA) $(srcdir)/Make.world $(DESTDIR)$(libdir)/Make.world
 
-# batch-parallel: batch-parallel.in
-# 	  cd $(top_builddir) && $(SHELL) ./config.status src/$@
-
-check-local: tests/check_Random tests/check_StatsQuantile tests/check_Uncompress tests/check_LintelAssert
+check-local: tests/check_StatsQuantile tests/check_Uncompress tests/check_LintelAssert
 	@echo "Regression tests successful"
 
 clean-local::
@@ -875,9 +869,6 @@ clean-local::
 @WITH_TCL_TRUE@tests/check_Random: tests/check-Random
 @WITH_TCL_TRUE@	tests/check-Random 2>&1 | diff -b $(srcdir)/@RANDOM_COMPARETO@ -
 @WITH_TCL_TRUE@	touch $@
-@WITH_TCL_FALSE@tests/check_Random:
-@WITH_TCL_FALSE@	@echo "Unable to run Random check, need TCL library"
-@WITH_TCL_FALSE@	touch $@
 
 tests/check_StatsQuantile: tests/check-StatsQuantile
 	tests/check-StatsQuantile | diff -c $(srcdir)/tests/stats_quantile.good -
