* Separate out the GC dependent Lintel bits into a separate library.
*.in, configure: dependent file rebuilds
com_hp_hpl_lintel.m4: LDFLAGS no longer include LINTEL_NOGCLIBS.
  Add support for the IntelCPUT2600 as same as pentium-m for now.
  BUGFIX: Escape NOTICE with a ',' in it, it was being interpreted as
  multiple arguments to the function and ended up writing the file bug
  during configuration.
configure.ac: add in LIBLINTELGC_VERSION
src/Makefile.am: remove nogc pthread bits that aren't needed any more, 
  add in new libLintelGC_la* bits.  Make dependencies on -lLintel 
  instead depend on libLintel.la so that parallel builds work right.
lintel-config.in: add option for --libtool-lintelgc, make nogclibs only
  work if Lintel was compiled with GC support

--- a/configure.ac
+++ b/configure.ac
@@ -89,10 +89,12 @@ AC_SYS_LARGEFILE
 
 LIBLINTEL_VERSION=0:0:0
 LIBLINTELPTHREAD_VERSION=0:0:0
+LIBLINTELGC_VERSION=0:0:0
 LIBNOGC_VERSION=0:0:0
 
 AC_SUBST(LIBLINTEL_VERSION)
 AC_SUBST(LIBLINTELPTHREAD_VERSION)
+AC_SUBST(LIBLINTELGC_VERSION)
 AC_SUBST(LIBNOGC_VERSION)
 
 ### HP-UX specific memory header replacement to make garbage collection work
