--- a/Makefile.in
+++ b/Makefile.in
@@ -120,12 +120,14 @@ F77 = @F77@
 FFLAGS = @FFLAGS@
 GC_CFLAGS = @GC_CFLAGS@
 GC_LIBS = @GC_LIBS@
+GREP = @GREP@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBLINTELGC_VERSION = @LIBLINTELGC_VERSION@
 LIBLINTELPTHREAD_VERSION = @LIBLINTELPTHREAD_VERSION@
 LIBLINTEL_VERSION = @LIBLINTEL_VERSION@
 LIBNOGC_VERSION = @LIBNOGC_VERSION@
@@ -167,12 +169,9 @@ WITH_MAKEBITS_FALSE = @WITH_MAKEBITS_FALSE@
 WITH_MAKEBITS_TRUE = @WITH_MAKEBITS_TRUE@
 WITH_TCL_FALSE = @WITH_TCL_FALSE@
 WITH_TCL_TRUE = @WITH_TCL_TRUE@
-ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_F77 = @ac_ct_F77@
-ac_ct_RANLIB = @ac_ct_RANLIB@
-ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -189,6 +188,9 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+datarootdir = @datarootdir@
+docdir = @docdir@
+dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 expanded_datadir = @expanded_datadir@
 host = @host@
@@ -196,17 +198,21 @@ host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
+htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
+pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
