* enable selective compilation of stdio_64.[CH]; recent versions of      Linux seem to include them and they are more compliant      (e.g. Lintel one is missing fopen mode "a").
*.in, configure: dependent file rebuilds
configure.ac: new AC_ARG_ENABLE, AM_CONDITIONAL bits
{src,include}/Makefile.am: make stdio_64.[CH] dependent on ENABLE_STDIO64

--- a/configure.ac
+++ b/configure.ac
@@ -116,6 +116,12 @@ AC_ARG_WITH(makebits,
 
 AM_CONDITIONAL(WITH_MAKEBITS, test $with_makebits = yes)
 
+AC_ARG_ENABLE(stdio64,
+  [  --enable-stdio64 enable the stdio64 routines on platforms that left them out ]
+  [enable_stdio64=$enableval],
+  [enable_stdio64=no])
+AM_CONDITIONAL(ENABLE_STDIO64, test $enable_stdio64 = yes)
+
 ### The Random regression tests generates different output on different 
 ### machines (and possibly compilers) -- pick the appropriate file.
 
