* BUGFIX: use expand_variable to expand datadir for substitution      into batch-parallel's expanded_datadir variable.    * Add a lot of documentation to batch-parallel
configure, configure.ac: the bugfix.

common.pm: improve debugging if user fails to override sub rebuild and
  make sub rebuild_thing_fail print a better message on failure.

StringUtil.C: add a TODO to document a mis-feature in strtol

batch-parallel.in: add ability to print out manpage by running with
  --man, and add in a significant amount of documentation into the
  source file about how to build a module.  Minor fixes to the --help
  output to work better with the POD documentation.

--- a/configure.ac
+++ b/configure.ac
@@ -140,7 +140,8 @@ AC_SUBST(RANDOM_COMPARETO)
 
 AC_CONFIG_FILES([Makefile src/lintel-config src/lintel-acinclude include/Makefile src/Makefile src/batch-parallel])
 
-expanded_datadir=`eval echo $datadir`
+EXPAND_VARIABLE
+expanded_datadir=`expand_variable $datadir`
 AC_SUBST(expanded_datadir)
 
 AC_OUTPUT
