* Add in Text::ExpandInt copied from usi.hpl.hp.com/ManagementTools/main      revision 8a4a30507b776c2c751f4f0923ecd176f710adaf; Lintel should end up      being the final destination of it.  Text::ExpandInt lets you expand out      text expressions into a list.
ExpandInt.pm: the new module

Makefile.am: add in the bits to install ExpandInt.pm; remove some commented
  out bits that were obsolete.

Makefile.in: dependent file rebuild

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -102,8 +102,8 @@ endif
 bpmodulesdir = $(datadir)/bp_modules
 nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm
 
-# batch-parallel: batch-parallel.in
-# 	  cd $(top_builddir) && $(SHELL) ./config.status src/$@
+perllibdir = $(datadir)/perl5
+nobase_perllib_DATA = Text/ExpandInt.pm
 
 ## TODO: ought to move all this regression stuff to a dejagnu style
 ## regression test, which is hopefully sufficiently flexible to handle
